[project]
name = "app"
version = "0.1.0"
description = "MLE"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "arq>=0.25.0",
    "httpx>=0.27.0",
    "stripe>=14.0.1",
]

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit>=3.6.2",
    "black",
    "isort",
]
